@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-17-2004 patrickh    Fixed potential problems with polymorphic Sonix types
+                        not being compiled into the sonix library correctly.
+                        NEW VERSION: 0.4.1
 Apr-11-2004 patrickh    Sonix now depends on an installed version of GMTL.
 Dec-01-2003 patrickh    Removed the deletePlugin() function from the required
                         list of entry points a Sonix plug-in must implement.
